# fatter

./: Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
examples/: bitflags_tags.rs  chain_errors.rs  derive_errors.rs  wrap_anyhow.rs
src/: anyhow.rs  bitflags.rs  default.rs  lib.rs
